This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - mark disabled eventhandler red on process info page
          - Panorama View:
            - fix start page not found when using OMD

2.10     Wed Aug 24 14:59:03 CEST 2016
          - add useragentcompat option for IE compatibility mode (ofosos #626)
          - support reading action_menu_items from file/folder
          - support thruk_local.d/file.$hostname files to separate host specific configs
          - fix can_submit_commands setting not used from contact (#597)
          - fix corrupting datafiles when trying to write to full filesystems
          - support curl/wget scripts when cookie auth is enabled
          - Logcache:
            - add logcache_import_exclude option
            - remove orphaned plugin output references on logcacheclean
          - Reports:
            - include any ok event always in availability calculation
          - Panorama View:
            - make popup completely customizable
            - add dashboard status icon type
            - add performance bar icon type
            - add trend / forecast icon type
            - icon label can be mouseover only now
            - background color of dashboards can be changed now
            - do not overlap icons which are placed close together
            - host status beats service status for group/filter icons
            - add scripted dashboard support
            - dashboard files moved to /etc/thruk/panorama
            - add dashboard overview as start page
            - last dashboard can be closed now
            - add text center option to labels
            - add round corners option to labels
          - Config Tool:
            - support recursive object removal
            - empty files will be deleted when the last object is removed
            - fix showing custom variables attribute for some objects
            - fix nested additive templates (#630)