@@ -3,6 +3,8 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 next:
           - mark disabled eventhandler red on process info page
           - Panorama View:
+            - increase popups delay to 1second
+            - fix popups showing when mouse moved over a icon
             - fix start page not found when using OMD
 
 2.10     Wed Aug 24 14:59:03 CEST 2016
